--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,5 @@
 name: Build and Deploy
-on: [push]
+on: [push, workflow_dispatch]
 
 permissions:
   contents: write
@@ -18,7 +18,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      
+
       - name: Install and Build
         run: |
           pip install --upgrade 'rayter-generator==1.*'
